Fix typo; fix a style

--- a/footer.html
+++ b/footer.html
@@ -1,6 +1,6 @@
     <div id="raw_include_README_md"></div>
     <footer>
-        This page is maintain by <a href="https://pkufool.github.io/">pkufool</a>, power by <a href="https://github.com/aperezdc/ngx-fancyindex">nginx fancyindex</a>, theme is available <a href="https://github.com/pkufool/nginx-theme">here</a>
+        This page is maintained by <a href="https://pkufool.github.io/">pkufool</a>, powered by <a href="https://github.com/aperezdc/ngx-fancyindex">nginx fancyindex</a>, theme is available <a href="https://github.com/pkufool/nginx-theme">here</a>
     </footer>
     <script src="https://unpkg.com/xregexp/xregexp-all.js"></script>
     <script type="text/javascript" src="/theme/addNginxFancyIndexForm.js"></script>
@@ -33,7 +33,7 @@
         });
 
         document.querySelectorAll('#list th').forEach((th, index) => {
-          const widths = ['70%', '15%', '15%']; // 这里定义每个th的宽度
+          const widths = ['75%', '10%', '15%']; // 这里定义每个th的宽度
           th.style.width = widths[index] || 'auto'; // 设置宽度，如果没有定义则为自动
         });
     </script>
